// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`axis bottom with linear scale 1`] = `
<svg
  height={50}
  width={500}
>
  <g
    fill="none"
    fontFamily="sans-serif"
    fontSize={10}
    textAnchor="middle"
    transform="translate(0, 0)"
  >
    <path
      className="domain"
      d="M0.5,6V0.5H400.5V6"
      stroke="currentColor"
    />
    <g
      className="tick"
      transform="translate(0.5,0)"
    >
      <line
        stroke="currentColor"
        y2={6}
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y={9}
      >
        0
      </text>
    </g>
    <g
      className="tick"
      transform="translate(40.5,0)"
    >
      <line
        stroke="currentColor"
        y2={6}
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y={9}
      >
        10
      </text>
    </g>
    <g
      className="tick"
      transform="translate(80.5,0)"
    >
      <line
        stroke="currentColor"
        y2={6}
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y={9}
      >
        20
      </text>
    </g>
    <g
      className="tick"
      transform="translate(120.5,0)"
    >
      <line
        stroke="currentColor"
        y2={6}
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y={9}
      >
        30
      </text>
    </g>
    <g
      className="tick"
      transform="translate(160.5,0)"
    >
      <line
        stroke="currentColor"
        y2={6}
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y={9}
      >
        40
      </text>
    </g>
    <g
      className="tick"
      transform="translate(200.5,0)"
    >
      <line
        stroke="currentColor"
        y2={6}
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y={9}
      >
        50
      </text>
    </g>
    <g
      className="tick"
      transform="translate(240.5,0)"
    >
      <line
        stroke="currentColor"
        y2={6}
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y={9}
      >
        60
      </text>
    </g>
    <g
      className="tick"
      transform="translate(280.5,0)"
    >
      <line
        stroke="currentColor"
        y2={6}
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y={9}
      >
        70
      </text>
    </g>
    <g
      className="tick"
      transform="translate(320.5,0)"
    >
      <line
        stroke="currentColor"
        y2={6}
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y={9}
      >
        80
      </text>
    </g>
    <g
      className="tick"
      transform="translate(360.5,0)"
    >
      <line
        stroke="currentColor"
        y2={6}
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y={9}
      >
        90
      </text>
    </g>
    <g
      className="tick"
      transform="translate(400.5,0)"
    >
      <line
        stroke="currentColor"
        y2={6}
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y={9}
      >
        100
      </text>
    </g>
  </g>
</svg>
`;

exports[`axis left with linear scale 1`] = `
<svg
  height={50}
  width={500}
>
  <g
    fill="none"
    fontFamily="sans-serif"
    fontSize={10}
    textAnchor="end"
    transform="translate(0, 0)"
  >
    <path
      className="domain"
      d="M-6,0.5H0.5V400.5H-6"
      stroke="currentColor"
    />
    <g
      className="tick"
      transform="translate(0,0.5)"
    >
      <line
        stroke="currentColor"
        x2={-6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={-9}
      >
        0
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,40.5)"
    >
      <line
        stroke="currentColor"
        x2={-6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={-9}
      >
        10
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,80.5)"
    >
      <line
        stroke="currentColor"
        x2={-6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={-9}
      >
        20
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,120.5)"
    >
      <line
        stroke="currentColor"
        x2={-6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={-9}
      >
        30
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,160.5)"
    >
      <line
        stroke="currentColor"
        x2={-6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={-9}
      >
        40
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,200.5)"
    >
      <line
        stroke="currentColor"
        x2={-6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={-9}
      >
        50
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,240.5)"
    >
      <line
        stroke="currentColor"
        x2={-6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={-9}
      >
        60
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,280.5)"
    >
      <line
        stroke="currentColor"
        x2={-6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={-9}
      >
        70
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,320.5)"
    >
      <line
        stroke="currentColor"
        x2={-6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={-9}
      >
        80
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,360.5)"
    >
      <line
        stroke="currentColor"
        x2={-6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={-9}
      >
        90
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,400.5)"
    >
      <line
        stroke="currentColor"
        x2={-6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={-9}
      >
        100
      </text>
    </g>
  </g>
</svg>
`;

exports[`axis right with linear scale 1`] = `
<svg
  height={50}
  width={500}
>
  <g
    fill="none"
    fontFamily="sans-serif"
    fontSize={10}
    textAnchor="start"
    transform="translate(0, 0)"
  >
    <path
      className="domain"
      d="M6,0.5H0.5V400.5H6"
      stroke="currentColor"
    />
    <g
      className="tick"
      transform="translate(0,0.5)"
    >
      <line
        stroke="currentColor"
        x2={6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={9}
      >
        0
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,40.5)"
    >
      <line
        stroke="currentColor"
        x2={6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={9}
      >
        10
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,80.5)"
    >
      <line
        stroke="currentColor"
        x2={6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={9}
      >
        20
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,120.5)"
    >
      <line
        stroke="currentColor"
        x2={6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={9}
      >
        30
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,160.5)"
    >
      <line
        stroke="currentColor"
        x2={6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={9}
      >
        40
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,200.5)"
    >
      <line
        stroke="currentColor"
        x2={6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={9}
      >
        50
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,240.5)"
    >
      <line
        stroke="currentColor"
        x2={6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={9}
      >
        60
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,280.5)"
    >
      <line
        stroke="currentColor"
        x2={6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={9}
      >
        70
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,320.5)"
    >
      <line
        stroke="currentColor"
        x2={6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={9}
      >
        80
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,360.5)"
    >
      <line
        stroke="currentColor"
        x2={6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={9}
      >
        90
      </text>
    </g>
    <g
      className="tick"
      transform="translate(0,400.5)"
    >
      <line
        stroke="currentColor"
        x2={6}
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x={9}
      >
        100
      </text>
    </g>
  </g>
</svg>
`;

exports[`axis top with linear scale 1`] = `
<svg
  height={50}
  width={500}
>
  <g
    fill="none"
    fontFamily="sans-serif"
    fontSize={10}
    textAnchor="middle"
    transform="translate(0, 0)"
  >
    <path
      className="domain"
      d="M0.5,-6V0.5H400.5V-6"
      stroke="currentColor"
    />
    <g
      className="tick"
      transform="translate(0.5,0)"
    >
      <line
        stroke="currentColor"
        y2={-6}
      />
      <text
        dy="0em"
        fill="currentColor"
        y={-9}
      >
        0
      </text>
    </g>
    <g
      className="tick"
      transform="translate(40.5,0)"
    >
      <line
        stroke="currentColor"
        y2={-6}
      />
      <text
        dy="0em"
        fill="currentColor"
        y={-9}
      >
        10
      </text>
    </g>
    <g
      className="tick"
      transform="translate(80.5,0)"
    >
      <line
        stroke="currentColor"
        y2={-6}
      />
      <text
        dy="0em"
        fill="currentColor"
        y={-9}
      >
        20
      </text>
    </g>
    <g
      className="tick"
      transform="translate(120.5,0)"
    >
      <line
        stroke="currentColor"
        y2={-6}
      />
      <text
        dy="0em"
        fill="currentColor"
        y={-9}
      >
        30
      </text>
    </g>
    <g
      className="tick"
      transform="translate(160.5,0)"
    >
      <line
        stroke="currentColor"
        y2={-6}
      />
      <text
        dy="0em"
        fill="currentColor"
        y={-9}
      >
        40
      </text>
    </g>
    <g
      className="tick"
      transform="translate(200.5,0)"
    >
      <line
        stroke="currentColor"
        y2={-6}
      />
      <text
        dy="0em"
        fill="currentColor"
        y={-9}
      >
        50
      </text>
    </g>
    <g
      className="tick"
      transform="translate(240.5,0)"
    >
      <line
        stroke="currentColor"
        y2={-6}
      />
      <text
        dy="0em"
        fill="currentColor"
        y={-9}
      >
        60
      </text>
    </g>
    <g
      className="tick"
      transform="translate(280.5,0)"
    >
      <line
        stroke="currentColor"
        y2={-6}
      />
      <text
        dy="0em"
        fill="currentColor"
        y={-9}
      >
        70
      </text>
    </g>
    <g
      className="tick"
      transform="translate(320.5,0)"
    >
      <line
        stroke="currentColor"
        y2={-6}
      />
      <text
        dy="0em"
        fill="currentColor"
        y={-9}
      >
        80
      </text>
    </g>
    <g
      className="tick"
      transform="translate(360.5,0)"
    >
      <line
        stroke="currentColor"
        y2={-6}
      />
      <text
        dy="0em"
        fill="currentColor"
        y={-9}
      >
        90
      </text>
    </g>
    <g
      className="tick"
      transform="translate(400.5,0)"
    >
      <line
        stroke="currentColor"
        y2={-6}
      />
      <text
        dy="0em"
        fill="currentColor"
        y={-9}
      >
        100
      </text>
    </g>
  </g>
</svg>
`;
